# cloup

./: .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  CREDITS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PYPI_README.rst  README.rst  codecov.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  release.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  enhancement.md  feature_request.md  other.md
.github/workflows/: tests.yaml
cloup/: __init__.py  _cloup.py  _commands.py  _context.py  _option_groups.py  _params.py  _params.pyi  _sections.py  _util.py  formatting.py  lazy.py  location.py  styling.py  types.py  typing.py  warnings.py
cloup/cli/: _lib.py  main.py
cloup/completion/: __init__.py  _bash.py  _core.py  _fish.py  _powershell.py  _shared.py  _zsh.py
cloup/constraints/: __init__.py  _conditional.py  _core.py  _mixin.py  _support.py  common.py  conditions.py  exceptions.py  util.py
cloup/formatting/: __init__.py  _formatter.py  _util.py  sep.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_autoapi_templates/python/: module.rst
docs/_static/styles/: copybutton-overrides.css  extensions-overrides.css  tabs-overrides.css  theme-overrides.css
docs/pages/: aliases.rst  arguments.rst  constraints.rst  formatting.rst  installation.rst  lazy-loading.rst  misc.rst  option-groups.rst  sections.rst  usage.rst
examples/: arguments_with_help.py  default_command.py  flat_option_groups.py  git_sections.py  option_groups.py  option_groups_example.py
examples/lazy_loading/: cli.py  lib.py  main.py
examples/lazy_loading/commands/: add.py  commit.py  push.py
examples/lazy_loading/commands/stash/: stash.py  stash_apply.py  stash_pop.py
examples/manim/: config.py  main.py  render.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  test.txt
scripts/: browser.py  copytree.py  generate_git_example.py  make-help.py  make-wheel.py  remove.py
tests/: __init__.py  conftest.py  example.py  example_command.py  example_group.py  test_aliases.py  test_cloup.py  test_commands.py  test_context.py  test_formatting.py  test_lazy_loading.py  test_location.py  test_option_groups.py  test_sections.py  test_sep.py  test_styling.py  test_types.py  test_util.py  util.py
tests/constraints/: conftest.py  test_common.py  test_conditional_constraints.py  test_constraints.py  test_mixin.py  test_support.py  test_util.py
